--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.1.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
